--- a/practice/views/file.html
+++ b/practice/views/file.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/public/output.css">
   <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1 class="text-red-500">hello friday</h1>
-  <a href="/add-home">add home</a>
+  <div class="main">
+     <h1>Welcome To Home Page</h1>
+     <a href="/add-home" >Add Home</a>
+  </div>
+   
 </body>
 </html>
