--- a/practice2/views/file.html
+++ b/practice2/views/file.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="output.css">
 </head>
 <body>
   <div class="main">
-     <h1>Welcome To Home Page</h1>
-     <a href="/add-home" >Add Home</a>
+     <h1 class="text-3xl font-bold underline">Welcome To Home Page</h1>
+     <a href="/add-home"  class="text-amber-600">Add Home</a>
   </div>
    
 </body>
