--- a/practice2/views/register.html
+++ b/practice2/views/register.html
@@ -9,8 +9,8 @@
 <body>
   <h1>Welcome to house Registration</h1>
   <form action="/add-home" method="post">
-  <input type="text" name="name" placeholder="Enter your name" id="input"> 
-  <input type="text" name="house-name" placeholder="Enter your house-name" id="input"><br>
+  <input type="text" name="namee" placeholder="Enter your name" id="input"> 
+  <input type="text" name="housename" placeholder="Enter your house-name" id="input"><br>
   <input type="submit" value="Submit" id="submit">
 </form>
 </body>
