--- a/practice3/views/register.ejs
+++ b/practice3/views/register.ejs
@@ -23,7 +23,7 @@
   <main class="bg-gradient-to-r from-red-400 to-blue-400 flex items-center justify-center h-screen">
     <div class="bg-white p-10 rounded-lg shadow-2xl max-w-md w-full">
     <h1 class="text-4xl font-extrabold text-center mb-8 text-gray-800">House Registration</h1>
-    <form action="/add-home" method="post" class="space-y-6">
+    <form action="/add-home" method="POST" class="space-y-6">
       <div>
         <label for="housename" class="block text-sm font-medium text-gray-700 mb-2"></label>
         <input type="text" name="housename" placeholder="Enter your house name" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
