--- a/assign/views/Home.ejs
+++ b/assign/views/Home.ejs
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="output.css">
   <title>Home</title>
 </head>
-<body class="bg-gray-100 text-gray-900">
-  <header class="bg-blue-500 text-white p-4">
-    <a href="/add-page" class="text-blue-500 hover:text-blue-700 transition duration-300 ease-in-out">Go to the page</a>
-  </header>
-  <main class="p-4">
-   <h1>Welcome to the home page</h1>
+<body class="bg-blue-50 text-blue-900">
+ <%- include('partials/navbar')%>
+  <main class="p-8 flex justify-center items-center h-screen">
+    <h1 class="text-4xl font-bold mb-4 text-center">Welcome to the Home Page</h1>
   </main>
+</body>
 </body>
 </html>
