--- a/assign/views/Home.ejs
+++ b/assign/views/Home.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="output.css">
-  <title>Home</title>
+<%- include('partials/head')%>
 </head>
 <body class="bg-blue-50 text-blue-900">
  <%- include('partials/navbar')%>
