--- a/assign/views/addpage.ejs
+++ b/assign/views/addpage.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>House Registration</title>
-  <link rel="stylesheet" href="output.css">
+<%- include('partials/head')%>
 </head>
 <body class="bg-gray-100">
   <%-include('partials/navbar')%>
@@ -31,6 +25,10 @@
             <div class="mb-4">
               <label class="block text-gray-700 text-sm font-bold mb-2" for="rating">Rating</label>
               <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="rating" type="number" name="rating" placeholder="Enter rating" min="1" max="5">
+            </div>
+            <div class="mb-4">
+              <label class="block text-gray-700 text-sm font-bold mb-2" for="imageUrl">Image URL</label>
+              <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="imageUrl" type="text" name="imageUrl" placeholder="Enter image URL">
             </div>
             <div class="flex items-center justify-between">
               <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
