--- a/assign/views/addpage.ejs
+++ b/assign/views/addpage.ejs
@@ -12,7 +12,7 @@
           <form action="/add-page" method="POST">
             <div class="mb-4">
               <label class="block text-gray-700 text-sm font-bold mb-2" for="houseName">House Name</label>
-              <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="houseName" type="text" name="houseName" placeholder="Enter house name">
+              <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="housename" type="text" name="housename" placeholder="Enter house name">
             </div>
             <div class="mb-4">
               <label class="block text-gray-700 text-sm font-bold mb-2" for="price">Price</label>
