--- a/assign/views/Host/addpage.ejs
+++ b/assign/views/Host/addpage.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head')%>
+<%- include('../partials/head')%>
 </head>
 <body class="bg-gray-100">
-  <%-include('partials/navbar')%>
+  <%-include('../partials/navbar')%>
   <div class="container mx-auto p-8">
     <div class="max-w-md mx-auto bg-white rounded-lg overflow-hidden md:max-w-lg">
       <div class="md:flex">
