--- a/assign/views/Host/Home.ejs
+++ b/assign/views/Host/Home.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head')%>
+<%- include('../partials/head')%>
 </head>
 <body class="bg-blue-50 text-blue-900">
- <%- include('partials/navbar')%>
+ <%- include('../partials/navbar')%>
   <main class="p-8 flex justify-center items-center h-screen">
     <h1 class="text-4xl font-bold mb-4 text-center">Welcome to the Home Page</h1>
   </main>
