--- a/assign/views/partials/navbar.ejs
+++ b/assign/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="space-x-4">
   <a href="/" class="hover:text-blue-300 font-semibold">Home Page</a>
   <a href="/book-page" class="hover:text-blue-300 font-semibold">My Booking</a>
-  <a href="/list-page" class="hover:text-blue-300 font-semibold">Home List</a>
+  <a href="/home-list" class="hover:text-blue-300 font-semibold">Home List</a>
   <a href="" class="hover:text-blue-300 font-semibold">My Fav</a>
   <a href="/add-page" class="hover:text-blue-300 font-semibold">Add Page</a>
 </nav>
