--- a/assign/views/partials/navbar.ejs
+++ b/assign/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
   <a href="/" class="hover:text-blue-300 font-semibold">Home Page</a>
   <a href="/book-page" class="hover:text-blue-300 font-semibold">My Booking</a>
   <a href="/home-list" class="hover:text-blue-300 font-semibold">Home List</a>
-  <a href="" class="hover:text-blue-300 font-semibold">My Fav</a>
+  <a href="/fav-page" class="hover:text-blue-300 font-semibold">My Fav</a>
   <a href="/add-page" class="hover:text-blue-300 font-semibold">Add Page</a>
 </nav>
 </header>
