--- a/assign/views/Host/Homedit.ejs
+++ b/assign/views/Host/Homedit.ejs
@@ -39,7 +39,8 @@
                     <% } %>
                   <% } %>
                 </p>
-                <button class="bg-green-500 p-4">Book</button>
+                <button class="bg-blue-500 p-4">Edit</button>
+                <button class="bg-red-500 p-4">Delete</button>
               </div>
             </div>
           <% }); %>
