--- a/assign/views/Store/HomeList.ejs
+++ b/assign/views/Store/HomeList.ejs
@@ -20,7 +20,7 @@
                 
                 <!-- Price -->
                 <p class="text-gray-700 text-base mb-2">
-                  <span class="font-semibold">Price:</span> $<%= house.price %>
+                  <span class="font-semibold">Price:</span> Rup<%= house.price %>
                 </p>
                 
                 <!-- Location -->
@@ -35,10 +35,11 @@
                     <% if (i < house.rating) { %>
                       <span class="text-yellow-500">&#9733;</span>
                     <% } else { %>
-                      <span class="text-gray-300">&#9733;</span>
+                      <span class="text-gray-300">&#9733;</span> 
                     <% } %>
                   <% } %>
                 </p>
+                <a class="bg-teal-400" href="/HomeList/<%= house.id %>">Details</a>
                 <button class="bg-green-500 p-4">Book</button>
               </div>
             </div>
