--- a/assign/views/Store/not.ejs
+++ b/assign/views/Store/not.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head')%>
+<%- include('../partials/head') %>
 </head>
 <body>
-  <%- include('partials/navbar') %>
+  <%- include('../partials/navbar') %>
 
   <div class="flex items-center justify-center  bg-gray-100"></div>
     <div class="text-center p-6 bg-white rounded shadow-lg">
