--- a/assign/views/Store/HomeDetails.ejs
+++ b/assign/views/Store/HomeDetails.ejs
@@ -46,6 +46,7 @@
                     <a class="bg-blue-400 p-4 rounded" href="/home-list">Back to List</a>
                     <button class="bg-green-500 p-4 rounded">Book</button>
                 </div>
+                <%- include('../partials/form') %>
             </div>
         </div>
     </main>
