--- a/assign/views/partials/form.ejs
+++ b/assign/views/partials/form.ejs
@@ -1,5 +1,5 @@
 <div>
-  <form action="/fav-page">
+  <form action="/fav-page" method="post">
       <button type="submit" class="bg-green-600 p-2 hover:bg-emerald-900">Add To Favorite</button>
       <input type="hidden" name="id" value="<%= house.id %>">
   </form>
