--- a/assign/views/Store/HomeList.ejs
+++ b/assign/views/Store/HomeList.ejs
@@ -40,6 +40,7 @@
                   <% } %>
                 </p>
                 <a class="bg-teal-400" href="/HomeList/<%= house.id %>">Details</a>
+                <%- include('../partials/form',{house:house}) %>
                 <button class="bg-green-500 p-4">Book</button>
               </div>
             </div>
