--- a/assign/views/partials/form.ejs
+++ b/assign/views/partials/form.ejs
@@ -1,6 +1,6 @@
 <div>
   <form action="/fav-page" method="post">
-      <button type="submit" class="bg-green-600 p-2 hover:bg-emerald-900">Add To Favorite</button>
+      <button type="submit" class="bg-teal-500 text-white px-4 py-2 rounded hover:bg-teal-600 transition-colors">Add To Favorite</button>
       <input type="hidden" name="id" value="<%= house.id %>">
   </form>
 </div>
