--- a/assign/views/Store/HomeDetails.ejs
+++ b/assign/views/Store/HomeDetails.ejs
@@ -10,9 +10,8 @@
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="rounded-lg overflow-hidden">
-                <img src="<%= house.imageUrl %>" alt="<%= house.housename %>" class="w-30 h-40 object-cover">
+            <img src="<%= house.imageUrl %>" alt="<%= house.housename %>" class="w-full h-full object-cover">
             </div>
-            
             <div class="space-y-6">
                 <div class="border-b pb-4">
                     <h3 class="text-2xl font-semibold mb-2">House Name</h3>
