--- a/assign/views/Host/Homedit.ejs
+++ b/assign/views/Host/Homedit.ejs
@@ -40,7 +40,9 @@
                   <% } %>
                 </p>
                 <a href="/edit-home/<%= house.id%>?editing=true" class="bg-blue-500 p-4">Edit</a>
-                <button class="bg-red-500 p-4">Delete</button>
+                <form action="/delete-home/<%= house.id%>" method="post">
+                   <button class="bg-red-500 p-4">Delete</button>
+                </form>
               </div>
             </div>
           <% }); %>
@@ -50,5 +52,5 @@
       </div>
     </div>
   </div>
-</body>a
+</body>
 </html>
