--- a/assign/views/Store/fav.ejs
+++ b/assign/views/Store/fav.ejs
@@ -39,6 +39,9 @@
                 <% } %>
               </p>
             </div>
+            <form action="/favourite/delete/:<%= house.id%>" method="post">
+              <button type="submit" class="to-blue-500">Remove From Favourites</button>
+            </form>
           </div>
         <% }); %>
       <% } else { %>
