--- a/Mongoose/views/Host/Homedit.ejs
+++ b/Mongoose/views/Host/Homedit.ejs
@@ -39,8 +39,8 @@
                     <% } %>
                   <% } %>
                 </p>
-                <a href="/edit-home/<%= house._id%>?editing=true" class="bg-blue-500 p-4">Edit</a>
-                <form action="/delete-home/<%= house._id%>" method="post">
+                <a href="/edit-home/<%= house.%>?editing=true" class="bg-blue-500 p-4">Edit</a>
+                <form action="/delete-home/<%= house.%>" method="post">
                    <button class="bg-red-500 p-4">Delete</button>
                 </form>
               </div>
