--- a/Mongoose/views/Store/fav.ejs
+++ b/Mongoose/views/Store/fav.ejs
@@ -39,7 +39,7 @@
                 <% } %>
               </p>
             </div>
-            <form action="/favourite/delete/:<%= house._id%>" method="post">
+            <form action="/favourite/delete/:<%= house.%>" method="post">
               <button type="submit" class="to-blue-500">Remove From Favourites</button>
             </form>
           </div>
